--- a/style.css
+++ b/style.css
@@ -3,10 +3,13 @@
 body{
   background: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
   width: 100%;
+  height:100%;
   max-width: 1600px;
   margin: 0;
   overflow-x: hidden;
 }
+
+/* html{height: 100%;} */
 
 /* main{
   padding:  0 0.5em;
@@ -16,22 +19,45 @@ body{
   padding: 0.5em;
 } */
 
+main > section{
+  background-color: #ffffff;
+  width:100%;
+  height: auto;
+}
 
 a.button{
-  width: 200px;
-  height: 50px;
+  width: 180px;
+  height: 45px;
   border: 2px solid #2b3b62;
   position: absolute;
-  top: 70%;
-  left: 10%;
+  top: 80%;
+  bottom: 10%;
+  left: 5%;
   text-align: center;
   text-decoration: none;
   font-family: 'Open Sans', sans-serif;
   color: #2b3b62;
   padding-top: 5px;
-  font-size: 20px;
+  font-size: 18px;
+  text-transform: uppercase;
+  /* font-weight: bold; */
+  display: inline-block;
+  padding-top: 18px;
+  /* background-color: rgba(171,182,185, 0.5); */
+  transition: .5s;
+              /* border-color 0.5s linear; */
 }
 
+h1{
+  font-size: 24px;
+}
+
+a.button:hover{
+  background-color: ;
+  box-shadow: inset 180px 0 rgba(43, 59, 98, .8);
+  color: #fff;
+  border-color: #fff;
+}
 
 /*Universal Elements*/
 *::selection{
@@ -101,7 +127,7 @@ h2{
   text-transform: uppercase;
   font-weight: lighter;
   letter-spacing: 1.25px;
-  font-size: 24px;
+  font-size: 20px;
   color: #ffffff;
   /* background-color: #2b3b62; */
   /* background-color: rgba(43, 59, 98, .8); */
@@ -205,10 +231,20 @@ span.location{
 
 
 #about, #therapy, #contact{
-  padding-bottom: 100px;
+padding-bottom: 25px;
 }
 
+h1{
+  margin-top: 0;
+}
 
+#therapy-intro{
+  margin-top: 0;
+}
+
+#therapy-services >  h2, #contact-content > h2{
+  margin-top: 0;
+}
 
 
 
@@ -219,7 +255,7 @@ address{
 }
 
 .contact-info a{
-color: #ffffff;;
+color: #ffffff;
 font-style: normal;
 font-family: 'open sans', sans-serif;
 font-weight: lighter;
@@ -245,7 +281,7 @@ div.hero-image-container{
 
 /**/
 #contact-grid{
-  grid-row-gap: 0;
+  grid-row-gap: 5px;
 }
 
 #contact-content{
@@ -253,13 +289,7 @@ div.hero-image-container{
 }
 
 
-#contact-grid{
-  grid-template-columns: auto;
-  grid-template-rows: auto auto auto;
-  /* grid-template-areas:
-  "contact-content contact-content contact-content ."
-  "map map map contact-info"; */
-}
+
 
 #contact-content{
   grid-column: 1/2;
@@ -267,17 +297,17 @@ div.hero-image-container{
 }
 
 #map{
-  grid-column: 1/2;
+  grid-column: 1/3;
   grid-row:2/3;
-  /* z-index: 0; */
+  z-index: 0;
   height: 100%;
 }
 
 .contact-info{
-  grid-column: 1/2;
+  grid-column: 1/3;
   grid-row: 3/4;
   z-index: 1;
-  padding :10px;
+
 
 }
 
@@ -289,62 +319,51 @@ div.hero-image-container{
   width: 100%;
 }
 
-div.map-container{
-  width: 100%;
-  height: 400px;
-  background-color: #787878;
+
+.icon{
+  width: 25px;
+  margin-right: 10px;
 }
 
-.contact-info  h3{
-  margin-top: 0;
+.contact-info div{
+  display: grid;
+  grid-template-columns: 30px auto;
+  grid-template-rows: auto auto;
+  grid-row-gap: 10px;
+}
+
+#pin, #phone, #mail{
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+div.address h3, div.telephone h3, div.email h3{
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+div.address address, div.contact-info a{
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+
+.contact-info{
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+}
+
+.icon{
+  align-self: center;
+  /* justify-self: flex-start; */
+}
+
+div.contact-info h3{
+  margin: 0;
   padding: 0;
 }
 
-div.flex-contact{
-  display: flex;
-}
 
-.flex-contact{
-  justify-content: space-around;
-  align-items: center;
-}
-
-/* div.contact-info{
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  justify-content: center;
-  align-items: flex-start;
-  grid-area: contact-info;
-} */
-
-.icon{
-  max-width: 50px;
-}
-
-#mail{
-  grid-area: mail-icon;
-}
-
-#phone{
-  grid-area: phone-icon;
-}
-
-#pin{
-  grid-area: pin-icon;
-}
-
-.email{
-  grid-area: email;
-}
-
-.telephone{
-  grid-area: telephone;
-}
-
-.address{
-  grid-area: address;
-}
 
 
 /*Therapy*/
@@ -387,11 +406,11 @@ p #therapy-intro{
 
 
 /*Therapy Sub-grids*/
-#therapy-grid > div {
+/* #therapy-grid > div {
   display: grid;
   grid-template-columns: auto auto;
   grid-template-rows: auto auto;
-}
+} */
 
 #therapy-services h2{
   grid-row: 1/2;
@@ -442,7 +461,7 @@ h1.hero-header span{
   font-size: 36px;
   font-weight: normal;
   position: absolute;
-  top: 25%;
+  top: 15%;
   /* left: -20%; */
   left: -100%;
   margin: 0;
@@ -452,7 +471,10 @@ h1.hero-header span{
           animation: fadeInLeft 1s ease forwards;
   -webkit-animation-delay: 1s;
           animation-delay: 1s;
+
 }
+
+
 
 @keyframes fadeInLeft {
   0% {
@@ -497,11 +519,7 @@ ul.content-list li::before{
   top: 10px;
   left: -11px;
 }
-#about, #contact, #therapy{
-  background-color: #f5f5f5;
-  width:100%;
-  height: auto;
-}
+
 
 #home{
   width: 100%;
@@ -537,6 +555,9 @@ header.header-scrolled{
 a.header-logo{
   text-decoration: none!important;
   color: rgb(43, 59, 98);
+  margin-left: 20px;
+  align-self: center;
+
 
 }
 
@@ -556,7 +577,7 @@ div.sub-logo{
 .button_container {
   position: absolute;
   top: 25%;
-  right: 2%;
+  right: 3%;
   height: 27px;
   width: 35px;
   cursor: pointer;
@@ -584,11 +605,13 @@ div.sub-logo{
 
 .button_container.active{
   z-index: 101;
+  position: fixed;
+  top: 3%;
 }
 div.button_container span {
   background: #2b3b62;
   border: none;
-  height: 5px;
+  height: 2.5px;
   width: 100%;
   position: absolute;
   top: 0;
@@ -740,17 +763,31 @@ footer > p{
   div.sub-logo{
     font-size: 18px;
   }
+
+  .hero-header{
+    font-size: 40px;
+    width: 90%;
+    left: 5%;
+
+}
+
+@media screen and (min-width:500px){
+  .hero-header{
+    width: 70%;
+  }
 }
 
 
 @media screen and (min-width:500px){
-  #home{
-    background-image: url("images/stacked-books-medium.png");
-  }
 
-  .hero-header{
-    font-size: 35px;
-    width: 50%;
+h1{
+    font-size: 30px;
+}
+
+h2{
+  font-size: 24px;
+}
+
   }
 
   #therapy-intro{
@@ -758,24 +795,27 @@ footer > p{
     margin-bottom: 50px;
   }
 
-  div.contact-info{
-    background-color: #2b3b62;
-    color: #ffffff;;
-    width:100%;
-    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);
-    z-index:2;
-}
+
 
   #contact{
-    padding-bottom: 7em;
+    padding-bottom: 3em;
     background-color: #ffffff;;
   }
+}
+@media screen and (min-width:600px){
+  #home{
+    background-image: url("images/stacked-books-medium.png");
+  }
+
 }
 
 
 @media screen and (min-width: 700px){
   @supports (display: grid){
 
+    #hamburger{
+      display: none;
+    }
 
     #headshot{
       width: 80%;
@@ -854,7 +894,7 @@ footer > p{
 
   /*Universal*/
   main{
-    width: 80%;
+    width: 90%;
     max-width: 1350px;
     margin: 0 auto;
     padding: 0;
@@ -863,15 +903,13 @@ footer > p{
     box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
   }
 
-  #hamburger{
-    display: none;
-  }
+
 
   h1{
   font-size: 36px;
   }
 
-  #about-grid, #therapy-grid, #contact-grid{
+  #about-grid, #therapy-grid{
       margin: 0 50px;
       grid-row-gap: 15px;
   }
@@ -882,10 +920,15 @@ footer > p{
   }
 
   .hero-header{
-    font-size: 40px;
+    font-size: 45px;
     padding: 0;
-    width: 50%;
+    width: 60%;
     margin-left: 10%;
+    top: 18%;
+  }
+
+  .button{
+    margin-left: 5%;;
   }
 
 
@@ -909,7 +952,20 @@ footer > p{
     "contact-info contact-info"; */
   }
 
+  #contact-content{
+    margin-left: 50px;
+  }
 
+#therapy-grid{
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto auto;
+
+  grid-template-areas:
+  "therapy-intro therapy-intro"
+  "services specialties"
+  "finances finances";
+}
+}
 
   .overlay{
     visibility: visible;
@@ -981,6 +1037,12 @@ header{
 
 }
 
+@media screen and (min-width: 850px){
+  .hero-header{
+    font-size: 45px;
+  }
+}
+
 @media screen and (min-width: 900px){
   /*Contact*/
   .contact-info{
@@ -997,69 +1059,25 @@ header{
 
 
 
+
+
 @media screen and (min-width: 1000px){
-  .hero-header{
-    font-size: 60px;
-    top: 10%;
+  #therapy-grid{
+    grid-template-columns: auto auto auto 25%;
+    grid-template-rows: auto auto;
+    /* grid-column-gap: 5rem; */
+    grid-template-areas:
+    "therapy-intro therapy-intro therapy-intro therapy-intro"
+    "services specialties finances finances";
   }
-
-  a.button{
-    top: 0%;
-    top: 85%;
-  }
-
-  .contact-info{
-      height:  auto;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: flex-start;
-  }
-
-  #contact-grid{
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 1fr 80px 1fr 80px 80px 80px 80px;
-    /* grid-template-areas:
-    "contact-content contact-content contact-content ."
-    "map map map contact-info"; */
-}
-
-  #contact-content{
-    grid-column: 1/5;
-    grid-row: 1/2;
-  }
-
-  #map{
-    grid-column: 1/7;
-    grid-row:2/5;
-    z-index: 0;
-    height: 100%;
-        grid-row-gap: 0;
-  }
-
-  .contact-info{
-    grid-column: 3/6;
-    grid-row: 4/7;
-    z-index: 1;
-    padding :10px;
-
-  }
-  .contact-info > div{
-    align-self: flex-start;
-  }
-
 }
 
 @media screen and (min-width: 1200px){
   #therapy-grid{
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto auto auto auto;
     /* grid-column-gap: 5rem; */
     grid-template-areas:
     "therapy-intro therapy-intro therapy-intro ."
-    "services services . ."
-    "specialties specialties . ."
-    "finances finances finances .";
+    "services specialties finances .";
   }
 }
 
@@ -1087,11 +1105,305 @@ header{
 
 
 
-.contact-info > div{
-  display: flex;
-  padding: 5px;
+
+
+
+
+
+
+
+
+
+
+
+/* .telephone, .address, .email{
+
+display: flex;
+} */
+
+
+/* div.address{
+  grid-column: 1/2;
+  grid-row: 1/3;
+}
+
+div.telephone{
+  grid-column: 2/3;
+  grid-row: 1/2;
+}
+
+div.email{
+  grid-column: 2/3;
+  grid-row: 2/3;
+} */
+
+
+
+#contact-grid{
+  grid-template-columns: 100%;
+  grid-template-rows: auto 400px auto;
+}
+
+div.contact-info{
+  background-color: #abb6b9;
+  color: #ffffff;;
+  width:100%;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1), 0 6px 20px 0 rgba(0,0,0,0.1);
+  z-index:2;
+}
+
+div.contact-info{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  justify-content: center;
+  padding: 15px 0;
+}
+
+@media screen and (min-width: 400px){
+  div.contact-info{
+    /* grid-template-columns: repeat(2, minmax(auto, 70px));
+    grid-template-rows: auto auto; */
+    justify-content: space-evenly;
+  }
+
+  .address{
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+
+  .telephone{
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+
+  .email{
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+
+  .email, .address{
+    margin-bottom: 0;
+  }
+}
+
+
+@media screen and (min-width: 600px){
+  #contact-grid{
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: auto repeat(4, 100px) 50px 50px;
+  }
+
+  #contact-content{
+    grid-column: 1/6;
+    grid-row:1/2;
+  }
+  #map{
+    grid-column: 1/6;
+    grid-row:2/6;
+  }
+
+  .contact-info{
+    grid-column: 2/5;
+    grid-row: 5/8;
+  }
+
+  .address{
+    align-self: flex-start;
+    justify-self: flex-start;
+  }
+  }
+
+
+
+
+@media screen and (min-width: 1000px){
+  .hero-header{
+    font-size: 60px;
+    top: 10%;
+  }
+
+  a.button{
+    top: 0%;
+    top: 85%;
+  }
+
+  .contact-info{
+      height:  auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-start;
+  }
+
+  #contact-grid{
+    grid-template-columns: repeat(8, 1fr) 20px 1fr;
+    grid-template-rows: auto repeat(7, 50px) 75px;
+    /* grid-template-areas:
+    "contact-content contact-content contact-content ."
+    "map map map contact-info"; */
+}
+
+  #contact-content{
+    grid-column: 1/10;
+    grid-row: 1/2;
+  }
+
+  #map{
+    grid-column: 1/11;
+    grid-row:2/9;
+    z-index: 0;
+    height: 100%;
+    width: 100%;
+        grid-row-gap: 0;
+  }
+
+  .contact-info{
+    grid-column: 5/10;
+    grid-row: 7/10;
+    z-index: 1;
+
+  }
+  .contact-info > div{
+    align-self: flex-start;
+    justify-self: flex-start;
+  }
+
+  .contact-info{
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 10px;
+  }
+
+}
+
+.email, .address{
+  margin-bottom: 10px;
+}
+
+
+
+
+/*mobile screens*/
+/* div.contact-info{
+  justify-content: space-around;
+  grid-template-columns: auto;
+  grid-template-rows: auto 400px auto;
+}
+#contact-content{
+  grid-row: 1/2;
+}
+#map{
+  grid-row: 2/3;
+}
+
+div.contact-info{
+  grid-row: 3/4;
+
 }
 
 .contact-info div{
-margin-left: 15px
+  display: grid;
+  grid-template-columns: 30px auto;
+  grid-template-rows: 30px auto;
+}
+
+.contact-info{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+}
+
+.address{
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.telephone{
+  grid-column: 1/2;
+  grid-row:2/3;
+}
+
+
+
+@media screen and (min-width: 1px){
+  .contact-info div{
+    grid-template-columns: 30px auto auto;
+    grid-template-rows: auto;
+  }
+
+
+
+  .icon{
+    grid-column: 1/2;
+      grid-row: 1/2;
+  }
+div.contact-info h3{
+  grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+div.contact-info address, div.contact-info a{
+  grid-column: 3/4;
+  grid-row: 1/2;
+  justify-self: flex-start;
+}
+
+.contact-info{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto;
+
+}
+
+.address{
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.telephone{
+  grid-column: 1/2;
+  grid-row: 2/3;
+
+}
+
+.email{
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+}
+
+@media screen and (min-width: 500px){
+  .contact-info div{
+    grid-template-columns: 30px auto;
+    grid-template-rows: auto;
+}
+    .icon{
+      grid-column: 1/2;
+        grid-row: 1/2;
+        justify-self: flex-start;
+        align-self: flex-start;    }
+
+
+  div.contact-info h3{
+    grid-column: 2/3;
+      grid-row: 1/2;
+  }
+
+  div.contact-info address, div.contact-info a{
+    grid-column: 1/3;
+    grid-row: 2/3;
+    justify-self: flex-start;
+  }
+
+
+
+
+  } */
+
+
+/*mobile view*/
+
+.contact-info{
+  grid-row-gap: 10px;
 }
